--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.868.0",
     "blob": "^0.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.0.2",
     "ibm-watson": "^6.0.2",
